Fix max-width bug in safari where the window would have a very slight horizonal scroll (#129)
* FIX max-width bug in safari where the window would have a very slight horizontal scroll

--- a/less/all.less
+++ b/less/all.less
@@ -1,3 +1,8 @@
+// Safari can slightly overflow the page width without this
+html, body {
+    max-width: 100%;
+}
+
 body {
     font-family: 'Roboto';
 }
